[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'fcwslib'
description = 'A library that makes Python Minecraft Bedrock Edition development much easier.'
authors = [
    {name='Ming Yue', email='mingfengpigeon@gmail.com'}
]
version = '0.1.1'
readme = 'README.md'
requires-python = '>=3.7'
license = {'text' = 'MIT License'}
keywords = ['minecraft']
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
dependencies = [
    'websockets'
]

